# Voxin

./: .gitignore  README.md  main.py  pyproject.toml  toggle.py  transcriber.py  voxin.sh
voxin/: __main__.py  main.py
