[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxin"
version = "0.1.0"
description = "Offline voice input for Linux — press hotkey, speak, get text in clipboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["voice", "speech", "whisper", "linux", "input", "dictation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper",
    "pyaudio",
    "evdev",
    "PyQt6",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/the-sherif/Voxin"
Repository = "https://github.com/the-sherif/Voxin"
"Bug Tracker" = "https://github.com/the-sherif/Voxin/issues"

[project.scripts]
voxin = "voxin.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voxin*"]

[tool.setuptools.package-data]
voxin = ["*.py"]
